Two more criteria, and a bugfix for request_line and request_headers defaults on HTTPResponse objects.

--- a/README
+++ b/README
@@ -19,3 +19,4 @@ TODO:
       theoretically this is possible. It would be great to do this with
       coroutines.
     - Allow for particularly horrible yet perfectly valid HTTP.
+    - SSL
